@@ -1,5 +1,7 @@
 # v0.25.6
 - working on accessible Venn diagrams and time series plots
+- working on accessibility for scatter plots
+- fixed VI() method to handle additional arguments, although they are currently ignored.
 
 # v0.25.5
 - Added experimental work on making accessible graphs for mounting on the web
